--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
         </div>
         <ul id="navlist">
               <!-- <li id="logo"> Angelas</li> -->
-              <li><a href="">Home</a></li>
-              <li><a href="">Menu</a></li>
-              <li><a href="">About</a></li>
+              <div id="links">
+              <li class="links"><a href="">Home</a></li>
+              <li class="links"><a href="">Menu</a></li>
+              <li class="links"><a href="">About</a></li>
+              <li class="links"><a href="">Contact us</a></li>
+              </div>
           </ul>
       </nav>
       <div id="chile">
