--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <ul id="navlist">
               <!-- <li id="logo"> Angelas</li> -->
               <div id="links">
-              <li class="links"><a href="">Home</a></li>
-              <li class="links"><a href="">Menu</a></li>
-              <li class="links"><a href="">About</a></li>
-              <li class="links"><a href="">Contact us</a></li>
+                <a href=""> <li class="links">Home</li></a>
+                <a href=""><li class="links">Menu</li></a>
+                <a href=""><li class="links">About</li></a>
+                <a href=""><li class="links">Contact Us</li></a>
               </div>
           </ul>
       </nav>
