--- a/index.html
+++ b/index.html
@@ -1,82 +1,127 @@
 <!DOCTYPE html>
 
-<html> 
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/icon3.ico">
-    <title>Angela's</title>
-        <script src="https://kit.fontawesome.com/c3a117a198.js" crossorigin="anonymous"></script>
-        <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400i,400|Trochut:400i&display=swap" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link type="text/css" rel="stylesheet" href="Assets/CSS/home.css">
-    </head>
-    <body>
-      
-      <nav id="navbar">
-        <img id="icon" href="index.html" src="img/icon3.ico"> 
-        <p class="cursive" id="logo"><a href="index.html">Angela's</a></p>
-        <div id="hamburger">
-          <h1 id="menuIcon">&#9776;</h1>
-        </div>
-        <ul id="navlist">
-              <!-- <li id="logo"> Angelas</li> -->
-              <div id="links">
-                <a href=""> <li class="links">Home</li></a>
-                <a href=""><li class="links">Menu</li></a>
-                <a href=""><li class="links">About</li></a>
-                <a href=""><li class="links">Contact Us</li></a>
-              </div>
-          </ul>
-      </nav>
-      <div id="chile">
-          <img class="red" src="Assets/CSS/img/red.png">
-          <img class="green" src="Assets/CSS/img/green.png">
-      </div>
-      <div class="carousel">
-          <img name="slides" class="slide" href="menu.html" src="img/authentic.jpg">
-      </div>
-      <div class="hours">
-        <h4> OPEN 7 DAYS A WEEK</h4>
-        <p class="" id="time"> Mon-Thurs: 11am-8pm <br> Fri-Sat: 11am-9pm<br> Sun: 9am-7pm</p><br>
-        <div id="callnow" class="callnow">
-          <button type="button" ><a id="menubtn" href="">View Our Full Menu!</a></button>
-        </div>
-      </div>
+<html>
 
-      <div class="cards">
-        <div class="card pcard">
-          <h3 id="phonehead">To-Go Order</h3>
-          <img id="phone" src="Assets/CSS/img/phone.png">
-          <p id="calldesc" class="pcrds">In a hurry? no worries! Click the Button below to give us a call and place an order with us today!</p>
-          <button class="crdbtn" type="button" ><a id="menubtn" href="tel: 8057370184">Call Now</a></button>
-        </div>
-        <div class="card">
-          <h3 id="abouthead">About Us</h3>
-          <img id="about" src="Assets/CSS/img/about.png">
-          <p class="pcrds">Angela's is a locally owned authentic mexican restaurant located in the city of Lompoc</p>
-          <button class="crdbtn" type="button" ><a id="menubtn" href="about.html">Learn More</a></button>
-        </div>
-        <div class="card">
-          <h3 id="starhead">Our Reviews</h3>
-          <img id="star" src="Assets/CSS/img/star.png">
-          <p class="starp pcrds">Curious on how we earned our 4.5/5 rating? Click below and learn why our customers love us!</p>
-          <button class="crdbtn" type="button" ><a id="menubtn" href="https://www.yelp.com/biz/angelas-restaurant-lompoc" target="_onblank">Our Reviews</a></button>
-        </div>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Tab Title/Icon -->
+  <link rel="icon" href="img/icon3.ico">
+  <title>Angela's</title>
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/c3a117a198.js" crossorigin="anonymous"></script>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400i,400|Trochut:400i&display=swap"rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- CSS -->
+  <link type="text/css" rel="stylesheet" href="Assets/CSS/home.css">
+</head>
+
+<body>
+<!-- Nav Start -->
+
+  <nav id="navbar">
+    <img id="icon" href="index.html" src="img/icon3.ico">
+    <p class="cursive" id="logo">
+      <a href="index.html">Angela's</a>
+    </p>
+    <div id="hamburger">
+      <h1 id="menuIcon">&#9776;</h1>
+    </div>
+    <ul id="navlist">
+      <div id="links">
+        <a href="index.html"><li class="links">Home</li></a>
+        <a href=""><li class="links">Menu</li></a>
+        <a href="about.html"><li class="links">About</li></a>
+        <a href=""><li class="links">Contact Us</li></a>
       </div>
-      <footer>
-      <div class="footer cursive">
-        <h6>
-          <a href="index.html">Home</a>
-          <a href="menu.html">Menu</a>
-          <a href="about.html">About</a>
-        </h6>
-        <hr>
-        <a href="https://instagram.com/angelas_rest?igshid=jt4wd6uogig3" target="_onblank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.facebook.com/pages/Angelas-Restaurant/116989004987155" target="_onblank"><i class="fab fa-facebook-square"></i></a>
-        </div>
-        <h5>©2020 LG Designs All Rights Reserved</h5>
-      </footer>
-      
-        <script src="Assets/JS/home.js"></script>
-    </body>
+    </ul>
+  </nav>
+
+  <!-- Nav End -->
+
+  <!-- Slideshow Start -->
+
+  <div id="chile">
+    <img class="red" src="Assets/CSS/img/red.png">
+    <img class="green" src="Assets/CSS/img/green.png">
+  </div>
+  <div class="carousel">
+    <img name="slides" class="slide" href="menu.html" src="img/authentic.jpg">
+  </div>
+
+  <!-- Slideshow End -->
+
+  <!-- Hour card Start -->
+
+  <div class="hours">
+    <h4> OPEN 7 DAYS A WEEK</h4>
+    <p class="" id="time"> 
+      Mon-Thurs: 11am-8pm 
+      <br> 
+      Fri-Sat: 11am-9pm
+      <br> 
+      Sun: 9am-7pm</p>
+      <br>
+    <div id="callnow" class="callnow">
+      <button type="button"><a id="menubtn" href="">View Our Full Menu!</a></button>
+    </div>
+  </div>
+
+  <!-- Hour card end -->
+
+  <!-- Cards Start -->
+
+  <!-- Call Card -->
+  <div class="cards">
+    <div class="card pcard">
+      <h3 id="phonehead">To-Go Order</h3>
+      <img id="phone" src="Assets/CSS/img/phone.png">
+      <p id="calldesc" class="pcrds">In a hurry? no worries! Click the Button below to give us a call and place an order with us today!</p>
+      <button class="crdbtn" type="button"><a id="menubtn" href="tel: 8057370184">Call Now</a></button>
+    </div>
+
+    <!-- About Card -->
+    <div class="card">
+      <h3 id="abouthead">About Us</h3>
+      <img id="about" src="Assets/CSS/img/about.png">
+      <p class="pcrds">Angela's is a locally owned authentic mexican restaurant located in the city of Lompoc</p>
+      <button class="crdbtn" type="button"><a id="menubtn" href="about.html">Learn More</a></button>
+    </div>
+
+    <!-- Reviews Card -->
+    <div class="card">
+      <h3 id="starhead">Our Reviews</h3>
+      <img id="star" src="Assets/CSS/img/star.png">
+      <p class="starp pcrds">Curious on how we earned our 4.5/5 rating? Click below and learn why our customers love us!
+      </p>
+      <button class="crdbtn" type="button"><a id="menubtn" href="https://www.yelp.com/biz/angelas-restaurant-lompoc"
+          target="_onblank">Our Reviews</a></button>
+    </div>
+  </div>
+
+  <!-- Cards End -->
+
+  <!-- Footer Start -->
+
+  <footer>
+    <div class="footer cursive">
+      <h6>
+        <a href="index.html">Home</a>
+        <a href="menu.html">Menu</a>
+        <a href="about.html">About</a>
+      </h6>
+      <hr>
+      <a href="https://instagram.com/angelas_rest?igshid=jt4wd6uogig3" target="_onblank"><i
+          class="fab fa-instagram"></i></a>
+      <a href="https://www.facebook.com/pages/Angelas-Restaurant/116989004987155" target="_onblank"><i
+          class="fab fa-facebook-square"></i></a>
+    </div>
+    <h5>©2020 LG Designs All Rights Reserved</h5>
+  </footer>
+  <!-- Footer End -->
+
+  <!-- JS -->
+  <script src="Assets/JS/home.js"></script>
+</body>
+
 </html>
