--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <ul id="navlist">
       <div id="links">
         <a href="index.html"><li class="links">Home</li></a>
-        <a href=""><li class="links">Menu</li></a>
+        <a href="menu.html"><li class="links">Menu</li></a>
         <a href="about.html"><li class="links">About</li></a>
         <a href=""><li class="links">Contact Us</li></a>
       </div>
