--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="index.html"><li class="links">Home</li></a>
         <a href="menu.html"><li class="links">Menu</li></a>
         <a href="about.html"><li class="links">About</li></a>
-        <a href=""><li class="links">Contact Us</li></a>
+        <a href="contact.html"><li class="links">Contact</li></a>
       </div>
     </ul>
   </nav>
@@ -105,16 +105,15 @@
 
   <footer>
     <div class="footer cursive">
-      <h6>
+      <h4>
         <a href="index.html">Home</a>
         <a href="menu.html">Menu</a>
         <a href="about.html">About</a>
-      </h6>
+        <a href="contact.html">Contact</a>
+      </h4>
       <hr>
-      <a href="https://instagram.com/angelas_rest?igshid=jt4wd6uogig3" target="_onblank"><i
-          class="fab fa-instagram"></i></a>
-      <a href="https://www.facebook.com/pages/Angelas-Restaurant/116989004987155" target="_onblank"><i
-          class="fab fa-facebook-square"></i></a>
+      <a href="https://instagram.com/angelas_rest?igshid=jt4wd6uogig3" target="_onblank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.facebook.com/pages/Angelas-Restaurant/116989004987155" target="_onblank"><i class="fab fa-facebook-square"></i></a>
     </div>
     <h5>©2020 LG Designs All Rights Reserved</h5>
   </footer>
