--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
   <i class="fas fa-mobile-alt"></i>
   <h2>Call Us</h2>
   <h4>Landline</h4>
-    <a href="tel:8057576845"><p>Mon - Fri 8am - 8pm </br> 805.757.6846</p></a>
+    <a href="tel:8057576845"><p>8am - 8pm </br> 805.757.6846</p></a>
 </div>
 
 <div class="contact">
