--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       Sun: 9am-7pm</p>
       <br>
     <div id="callnow" class="callnow">
-      <button type="button"><a id="menubtn" href="">View Our Full Menu!</a></button>
+      <a id="menubtn" href=""><button type="button">View Our Full Menu!</button></a>
     </div>
   </div>
 
@@ -77,7 +77,7 @@
       <h3 id="phonehead">To-Go Order</h3>
       <img id="phone" src="Assets/CSS/img/phone.png">
       <p id="calldesc" class="pcrds">In a hurry? no worries! Click the Button below to give us a call and place an order with us today!</p>
-      <button class="crdbtn" type="button"><a id="menubtn" href="tel: 8057370184">Call Now</a></button>
+      <a id="menubtn" href="tel: 8057370184"><button class="crdbtn" type="button">Call Now</button></a>
     </div>
 
     <!-- About Card -->
@@ -85,7 +85,7 @@
       <h3 id="abouthead">About Us</h3>
       <img id="about" src="Assets/CSS/img/about.png">
       <p class="pcrds">Angela's is a locally owned authentic mexican restaurant located in the city of Lompoc</p>
-      <button class="crdbtn" type="button"><a id="menubtn" href="about.html">Learn More</a></button>
+      <a id="menubtn" href="about.html"><button class="crdbtn" type="button">Learn More</button></a>
     </div>
 
     <!-- Reviews Card -->
@@ -94,8 +94,8 @@
       <img id="star" src="Assets/CSS/img/star.png">
       <p class="starp pcrds">Curious on how we earned our 4.5/5 rating? Click below and learn why our customers love us!
       </p>
-      <button class="crdbtn" type="button"><a id="menubtn" href="https://www.yelp.com/biz/angelas-restaurant-lompoc"
-          target="_onblank">Our Reviews</a></button>
+      <a id="menubtn" href="https://www.yelp.com/biz/angelas-restaurant-lompoc"
+          target="_onblank"><button class="crdbtn" type="button">Our Reviews</button></a>
     </div>
   </div>
 
