--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       Sun: 9am-7pm</p>
       <br>
     <div id="callnow" class="callnow">
-      <a id="menubtn" href=""><button type="button">View Our Full Menu!</button></a>
+      <a id="menubtn" href="menu.html"><button type="button">View Our Full Menu!</button></a>
     </div>
   </div>
 
