--- a/menu.html
+++ b/menu.html
@@ -145,125 +145,126 @@
       <a href="tel: 8057576845"> <button id="callbtn" type="button" href="tel:805737001">Place A To-Go Order!</button> </a>
 
       <div class="card">
-        <img id="star" src="Assets/CSS/img/conchita.jpg">
+        <img id="star" src="Assets/CSS/img/combos/one.jpg">
         <h3 class="foodtitle">1. Two Chile Rellenos</h3>
         <p class="starp pcrds"> Two Egg Battered Peppers Filled with Cheese Topped With Chile Relleno Sauce Served With a Side Of Refried Beans, Spanish Rice, And Side House Salad</p>
       </div>
 
       <div class="card">
-        <img id="star" src="Assets/CSS/img/conchita.jpg">
+        <img id="star" src="Assets/CSS/img/combos/two.jpg">
         <h3 class="foodtitle">2. Ground Beef Enchilada and Chile Relleno</h3>
         <p class="starp pcrds"> One Ground Beef Enchilada Topped with Red Enchilada Sauce and Fresh Cheese and One Egg Battered Pepper Filled with Cheese Topped with Chile Relleno Sauce Served With a Side Of Refried Beans, Spanish Rice, And Side House Salad</p> 
       </div>
 
       <div class="card">
-        <img id="star" src="Assets/CSS/img/conchita.jpg">
+        <img id="star" src="Assets/CSS/img/combos/three.jpg">
         <h3 class="foodtitle">3. Two Ground Beef Tacos</h3>
         <p class="starp pcrds"> Two Ground Beef Hard Shell Tacos Served With a Side Of Refried Beans, Spanish Rice, And Side House Salad</p>
       </div>
 
       <div class="card">
-        <img id="star" src="Assets/CSS/img/conchita.jpg">
+        <img id="star" src="Assets/CSS/img/combos/four.jpg">
         <h3 class="foodtitle">4. Chile Relleno & Ground Beef Taco</h3>
         <p class="starp pcrds">One Ground Beef Hard Shell Taco and One Egg Battered Pepper Filled With Cheese Topped With Chile Relleno Sauce Served With a Side Of Refried Beans, Spanish Rice, And Side House Salad</p>
       </div>
 
       <div class="card">
-        <img id="star" src="Assets/CSS/img/conchita.jpg">
+        <img id="star" src="Assets/CSS/img/combos/five.jpg">
         <h3 class="foodtitle">5. Cheese Enchilada & Ground Beef Taco</h3>
         <p class="starp pcrds"> One Cheese Enchilada Topped With Red Enchilada Sauce and Fresh Cheese and One Ground Beef Hard Shell Taco Served With a Side Of Refried Beans, Spanish Rice, And Side House Salad</p>
       </div>
 
       <div class="card">
-        <img id="star" src="Assets/CSS/img/conchita.jpg">
+        <img id="star" src="Assets/CSS/img/combos/six.jpg">
         <h3 class="foodtitle">6. Cheese Enchilada & Ground Beef Enchilada</h3>
         <p class="starp pcrds">One Cheese and One Ground Beef Enchilada Topped With Red Enchilada Sauce And Fresh Cheese Served With a Side Of Refried Beans, Spanish Rice, And Side House Salad</p>
       </div>
 
       <div class="card">
-        <img id="star" src="Assets/CSS/img/conchita.jpg">
+        <img id="star" src="Assets/CSS/img/combos/seven.jpg">
         <h3 class="foodtitle">7. Bean/Cheese Burrito & Ground Beef Hard Shell Taco</h3>
         <p class="starp pcrds"> One Bean and Cheese Burrito and One Ground Beef Hard Shell Taco Served With a Side Of Refried Beans, Spanish Rice, And Side House Salad
         </p>
       </div>
 
       <div class="card">
-        <img id="star" src="Assets/CSS/img/conchita.jpg">
+        <img id="star" src="Assets/CSS/img/combos/six.jpg">
         <h3 class="foodtitle">8. Two Cheese Enchiladas</h3>
         <p class="starp pcrds"> Two Cheese Enchiladas Topped with Red Enchilada Sauce and Fresh Cheese Served With a Side Of Refried Beans, Spanish Rice, And Side House Salad</p>
       </div>
 
       <div class="card">
-        <img id="star" src="Assets/CSS/img/conchita.jpg">
+        <img id="star" src="Assets/CSS/img/combos/nine.jpg">
         <h3 class="foodtitle">9. Chile Relleno, Cheese Enchilada, & Ground Beef Taco</h3>
         <p class="starp pcrds"> One Egg Battered Pepper Filled With Cheese Topped With Chile Relleno Sauce, One Cheese Enchiladas Topped with Red Enchilada Sauce and Fresh Cheese, and One Ground Beef Hard Shell Taco Served With a Side Of Refried Beans, Spanish Rice, And Side House Salad</p>
       </div>
 
       <div class="card">
-        <img id="star" src="Assets/CSS/img/conchita.jpg">
+        <img id="star" src="Assets/CSS/img/combos/ten.jpg">
         <h3 class="foodtitle">10. Tamale, Cheese Enchilada, & Ground Beef Taco</h3>
         <p class="starp pcrds"> One Tamale, One Cheese Enchilada Topped with Red Enchilada Sauce, and One Ground Beef Hard Shell Taco Served With a Side Of Refried Beans, Spanish Rice, And Side House Salad</p>
       </div>
 
       <div class="card">
-        <img id="star" src="Assets/CSS/img/conchita.jpg">
+        <img id="star" src="Assets/CSS/img/combos/eleven.jpg">
         <h3 class="foodtitle">11. Beef Or Chicken Flautas</h3>
         <p class="starp pcrds"> Your Choice Of 4 Corn or 3 Flour Flautas Served With a Side Of Refried Beans, Spanish Rice, And Side House Salad</p>
       </div>
 
       <div class="card">
-        <img id="star" src="Assets/CSS/img/conchita.jpg">
+        <img id="star" src="Assets/CSS/img/combos/twelve.jpg">
         <h3 class="foodtitle">12. Three Asada Tacos</h3>
         <p class="starp pcrds"> Three Carne Asada Tacos Served With a Side Of Refried Beans, Spanish Rice, And Side House Salad</p>
       </div>
 
       <div class="card">
-        <img id="star" src="Assets/CSS/img/conchita.jpg">
+        <img id="star" src="Assets/CSS/img/combos/thirteen.jpg">
         <h3 class="foodtitle">13. Chile Relleno, Cheese, & Ground Beef Enchiladas</h3>
         <p class="starp pcrds">One Ground Beef and One Cheese Enchilada Topped With Red Enchilada Sauce and Fresh Cheese and One Egg Battered Pepper Filled With Cheese Topped With Chile Relleno Sauce Served With a Side Of Refried Beans, Spanish Rice, And Side House Salad</p>
       </div>
 
       <div class="card">
-        <img id="star" src="Assets/CSS/img/conchita.jpg">
+        <img id="star" src="Assets/CSS/img/combos/thirteen.jpg">
         <h3 class="foodtitle">14. Chile Relleno & Two Ground Beef Enchilada</h3>
         <p class="starp pcrds"> Two Ground Beef Enchilada Topped With Red Enchilada Sauce And Fresh Cheese One Egg Battered Pepper Filled With Cheese Topped With Chile Relleno Sauce Served With a Side Of Refried Beans, Spanish Rice, And Side House Salad</p>
       </div>
 
       <div class="card">
-        <img id="star" src="Assets/CSS/img/conchita.jpg">
+        <img id="star" src="Assets/CSS/img/combos/fifteen.jpeg">
         <h3 class="foodtitle">15. Two Fish Tacos & Tamale</h3>
         <p class="starp pcrds"> Two Fish Tacos and One Tamale Served With a Side Of Refried Beans, Spanish Rice, And Side House Salad</p>
       </div>
 
       <div class="card">
-        <img id="star" src="Assets/CSS/img/conchita.jpg">
+        <img id="star" src="Assets/CSS/img/combos/sixteen.jpg">
         <h3 class="foodtitle">16. Chile Relleno & Shredded Beef Burrito</h3>
         <p class="starp pcrds"> one Egg Battered Pepper Filled With Cheese Topped With Chile Relleno Sauce and One Shredded Beef Burrito Served With a Side Of Refried Beans, Spanish Rice, And Side House Salad</p>
       </div>
 
       <div class="card">
-        <img id="star" src="Assets/CSS/img/conchita.jpg">
+        <img id="star" src="Assets/CSS/img/combos/seventeen.jpg">
         <h3 class="foodtitle">17. Chile Relleno, Fish Taco, & Asada Taco</h3>
         <p class="starp pcrds"> One Fish Taco, One Carne Asada Taco, and One Egg Battered Pepper Filled With Cheese Topped With Chile Relleno Sauce Served With a Side Of Refried Beans, Spanish Rice, And Side House Salad</p>
       </div>
 
       <div class="card">
-        <img id="star" src="Assets/CSS/img/conchita.jpg">
+        <img id="star" src="Assets/CSS/img/combos/twelve.jpg">
         <h3 class="foodtitle">18. Three Carnitas Tacos</h3>
         <p class="starp pcrds"> Three Carnitas Tacos Served With a Side Of Refried Beans, Spanish Rice, And Side House Salad</p>
       </div>
 
       <div class="card">
-        <img id="star" src="Assets/CSS/img/conchita.jpg">
+        <img id="star" src="Assets/CSS/img/combos/nineteen.jpg">
         <h3 class="foodtitle">19. Two Carnitas Tacos & One Tamale</h3>
         <p class="starp pcrds"> Two Carnitas Tacos and One Tamale Served With a Side Of Refried Beans, Spanish Rice, And Side House Salad</p>
       </div>
 
       <div class="card">
-        <img id="star" src="Assets/CSS/img/conchita.jpg">
+        <img id="star" src="Assets/CSS/img/combos/twenty.jpg">
         <h3 class="foodtitle">20. Two Asada Tacos & One Cheese Enchilada</h3>
         <p class="starp pcrds"> Two Asada Tacos and One Cheese Enchilada Topped with Enchilada Sauce and Fresh Served With a Side Of Refried Beans, Spanish Rice, And Side House Salad</p>
       </div>
+
 
     </div>
   </div>
