--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 <input name="Email" type="email" placeholder="Email Address">
 <label name="Phone Number">Phone </label>
 <input name="Phone Number" type="tel" placeholder="Phone Number">
-<textarea name="Message" cols="20" rows="5" form="contact">Type your message here...</textarea>
+<textarea name="Message" cols="20" rows="5" placeholder="Type your message here..." form="contact"></textarea>
 <input id="submit" type="submit" value="send">
 </form>
 
